# open-tren

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  docker-compose.yml  opencode.json  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: actualiza_gtfs.yml  captura_avisos.yml  captura_tiempo_real.yml
data/: .gitignore
docs/: fase-0-exploracion.md  fase-1-1-pipeline-ingestion.md  open-tren-implementation-proposal.md  plan-implementacion.md
docs/steering/: arquitectura.md  convenciones-estilo.md  decisiones.md  testing.md
scripts/: actualizar_gtfs.py  captura_avisos.py  captura_tiempo_real.py  procesar_gtfs_static.py  procesar_tiempo_real.py  setup_db.py
src/: __init__.py  config.py
src/fetchers/: __init__.py  avisos.py  base.py  gtfs_rt.py  gtfs_static.py
src/models/: __init__.py  circulacion.py  schemas.py
src/processors/: __init__.py  gtfs_rt.py  gtfs_static.py
src/storage/: __init__.py  database.py  repositories.py  schema.sql
streamlit/: README.md  app.py  requirements.txt
streamlit/lib/: __init__.py  data.py  db.py  queries.py  types.py
tests/: __init__.py  conftest.py
tests/fetchers/: __init__.py  test_avisos.py  test_base.py  test_gtfs_rt.py  test_gtfs_static.py
tests/models/: test_circulacion.py
tests/processors/: test_gtfs_rt_loader.py  test_gtfs_static_loader.py
tests/storage/: test_storage.py
