[project]
name = "open-tren"
version = "0.1.0"
description = "Dashboard de puntualidad ferroviaria en España"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "tenacity>=9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.15.0",
    "basedpyright>=1.0.0",
]

[tool.pyright]
include = ["src", "tests", "scripts"]
exclude = [
  "**/__pycache__",
  "**/node_modules",
  ".venv",
  "data",
]
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
reportMissingImports = "error"

# Configuración por entorno: código estricto, tests más laxos
executionEnvironments = [
  { root = "tests", reportMissingTypeStubs = "none", reportUnusedCallResult = "none", reportUnknownParameterType = "none", reportUnknownVariableType = "none", reportUnknownArgumentType = "none", reportMissingParameterType = "none", reportPrivateUsage = "none", reportUnknownMemberType = "none", reportAny = "warning" },
  { root = "scripts", reportMissingTypeStubs = "none", reportUnusedCallResult = "none", reportUnknownParameterType = "none", reportUnknownVariableType = "none", reportUnknownArgumentType = "none", reportMissingParameterType = "none", reportPrivateUsage = "none", reportUnknownMemberType = "none" }
]
